src/styles/partials/modal.styl
/**
 * Modal window
 */
.modal__wrapper {
  position: fixed;
  
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  background-color: $clrTransparent25;
}

.modal__body {
  position: relative;
  z-index: 12;
  
  max-width: 960px;
  
  margin: 3rem auto 0 auto;
  padding: 0 1.5rem;
  
  @media ({$bpMaxW320}) {
    padding: 0;
  }
}

.modal__content {
  padding: 1rem; 
  
  background-color: $clrWhite;
  
  @media ({$bpMaxW320}) {
    padding: 1rem 0;
  }
}

.modal__btn-close {
  display: inline-block;
  position: absolute;
  
  top: 0;
  right: 0;
  
  padding: 0 .5rem 1rem 0;
  
  font-family: sans-serif;
  font-size: 1rem;
  line-height: 1;
  
  color: $clrWhite;
  
  cursor: pointer;
  user-select: none;
  opacity: .5;
  
  transition: opacity .25s ease;

  &:hover {
    opacity: 1;
  }
  
  @media ({$bpMaxW320}) {
    top: -3rem;
    
    padding: 1rem;
  }
}

